@@ -4,6 +4,7 @@ Revision history for DBIx::Class
         - Bump forgotten Class::Accessor::Grouped core dependency
         - Promote forgotten Hash::Merge optdep to a hard requirement
         - Skip t/storage/error.t on smokers with leaking perls
+        - Fix t/storage/txn.t deadlocks on slower machines
 
 0.08125 2010-12-27 04:30 (UTC)
     * New Features / Changes
